cabal-version:      3.0
name:               propnet
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Jesse Holzman
maintainer:         todo@mail.com
build-type:         Simple
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
      , Control.Monad.PropNet
      , Control.Monad.PropNet.Class
      , Data.PropNet.Partial
      , Data.PropNet.Partial.EnumSet
      , Data.PropNet.Relation
      , Data.PropNet.TMS
    build-depends:    
      , base ^>=4.18.2.1
      , containers
      , hashable
      , unordered-containers
      , primitive
      , mtl
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite propnet-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.2.1,
        propnet
