cabal-version:      3.0
name:               propnet
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Jesse Holzman
maintainer:         todo@mail.com
build-type:         Simple
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
      , Control.Monad.PropNet
      , Control.Monad.PropNet.Class
      , Data.PropNet.Partial
      , Data.PropNet.Partial.Combination
      , Data.PropNet.Partial.OneOf
      , Data.PropNet.Relation
      , Data.PropNet.TMS
    build-depends:    
      , base ^>=4.17.2
      , containers
      , hashable
      , mtl
      , primitive
      , random
      , random-shuffle
      , unordered-containers
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite examples
    import:           warnings
    default-language: Haskell2010

    main-is:          Main.hs
    other-modules:
      , Sudoku
      , Tiles
      , VertexColor
    type:             exitcode-stdio-1.0
    hs-source-dirs:   examples
    build-depends:
      , base ^>=4.17.2
      , propnet
      , diagrams
      , diagrams-lib
      , diagrams-svg
